# WAVEqualizerPA

./: .gitignore  CMakeLists.txt  README.md  devices.cpp  devices.hpp  filter.cpp  filter.hpp  gui.cpp  gui.hpp  main.cpp  resource.h  resources.rc  stream.cpp  stream.hpp  stream_test.cpp  stream_test.hpp  wav.cpp  wav.hpp
filter_design/: filter_design.py
